--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "format-preview": "prettier --list-different 'src/**/*.js' '*.js'",
     "format-check": "prettier --check 'src/**/*.js' '*.js'",
     "prebuild": "rimraf build && mkdirp build",
-    "prepublish": "run-s build",
+    "prepare": "run-s build",
     "prestart": "run-s build",
     "publish": "git push && git push --tags && gh-release",
     "react-demo": "cd example && yarn && yarn start",
